--- a/node_app/package.json
+++ b/node_app/package.json
@@ -4,17 +4,26 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
+      "@types/koa": "^2.13.5",
+      "@types/koa-bodyparser": "^4.3.7",
+      "@types/koa-router": "^7.4.4",
+      "@types/koa2-cors": "^2.0.2",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.7",
+      "koa": "^2.13.4",
+      "koa-bodyparser": "^4.3.0",
+      "koa-router": "^12.0.0",
+      "koa2-cors": "^2.0.6",
       "reflect-metadata": "^0.1.13",
-      "sqlite3": "^5.0.2"
+      "sqlite3": "^5.0.2",
+      "typeorm": "0.3.7"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "dev": "nodemon src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
