--- a/web_app/package.json
+++ b/web_app/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "mobx-state-tree": "^5.1.5",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7"
   }
 }
